k8s/deploy-with-ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linux-tweet-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: linux-tweet-app
  replicas: 1
  template:
    metadata:
      labels:
        app: linux-tweet-app
    spec:
      containers:
      - name: linux-tweet-app-container
        image: abhilashindulkar/linux-tweet-app:v0.01
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registrycreds
