k8s/deploy-with-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: linux-tweet-app-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30007
    targetPort: 80
  selector:
    app: linux-tweet-app
    type: backend
