k8s/deploy-with-ingress/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "app.local.io"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: nginx
  rules:
  - host: "app.local.io"
    http:
      paths:
      - pathType: Prefix
        path: "/tweet(/|$)(.*)"
        backend:
          service:
            name: linux-tweet-app-service
            port:
              number: 80
      - pathType: Prefix
        path: "/tomcat(/|$)(.*)"
        backend:
          service:
            name: tomcat-service
            port:
              number: 8080
